--- a/AntiqueShopFinder/AddShopWindow.xaml
+++ b/AntiqueShopFinder/AddShopWindow.xaml
@@ -82,7 +82,9 @@
                     <TextBlock Text="Контактная информация:" FontWeight="SemiBold" FontSize="15" Margin="0,10,0,0"/>
 
                     <TextBlock Text="Телефон" FontWeight="SemiBold"/>
-                    <TextBox Name="PhoneTextBox" PreviewTextInput="PhoneTextBox_PreviewTextInput"/>
+                    <TextBox Name="PhoneTextBox" 
+                            PreviewTextInput="PhoneTextBox_PreviewTextInput"
+                            DataObject.Pasting="PhoneTextBox_Pasting"/>
 
                     <TextBlock Text="Email" FontWeight="SemiBold"/>
                     <TextBox Name="EmailTextBox"/>
@@ -95,9 +97,14 @@
                     <TextBlock Text="Выберите категории товаров, которые представлены в магазине:" 
                               FontSize="12" Foreground="#7f8c8d" Margin="0,0,0,10"/>
 
-                    <WrapPanel Name="CategoriesPanel" Margin="0,0,0,15">
-                        <!-- Категории будут добавляться динамически -->
-                    </WrapPanel>
+                    <!-- Оборачиваем панель категорий в ScrollViewer -->
+                    <Border Height="120" BorderBrush="#ddd" BorderThickness="1" Background="White" Margin="0,0,0,15">
+                        <ScrollViewer VerticalScrollBarVisibility="Auto">
+                            <WrapPanel Name="CategoriesPanel" Margin="10">
+                                <!-- Категории будут добавляться динамически -->
+                            </WrapPanel>
+                        </ScrollViewer>
+                    </Border>
 
                     <!-- Кнопки -->
                     <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" Margin="0,20,0,0">
